src/views/css/style.css
/** {
  outline: 1px solid red !important;
}*/
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -box-sizing: border-box;
}

body {
  font-family: "Trebuchet MS", Helvetica, sans-serif;
  background: black;
}

input {
  background: grey;
  font-size: 18px;
}

form {
  display: inline-block;
}

.centered {
  text-align: center;
}

#pizzaSize {
  font-weight: 800;
}

.mover {
  position: fixed;
  width: 256px;
  z-index: -1;
}

.randomPizzaContainer {
  float: left;
  display: flex;
}

.randomPizzaContainer:after {
  content: "";
  display: table;
  clear:both;
}

 .container {
  background-color: rgba(240, 60, 60, 0.8);
}

